--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -27,9 +27,11 @@ services:
       # - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
 
     labels:
-      - "traefik.http.routers.dashboard.rule=Host(`localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.rule=Host(`student.kaist.ac.kr`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.service=api@internal"
+      - "traefik.http.routers.dashboard.middlewares=auth@docker"
+      - "traefik.http.middlewares.auth.basicauth.users=kaistua:$$2y$$05$$VnWsC5H/qZU1Jx4QiaeP4.pVR3X4iPHbk5gRnl4v3x1WhC2tLelBO"
 
-networks: 
+networks:
   proxy:
     name: proxy_default
