--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -30,6 +30,8 @@ services:
       - "traefik.http.routers.dashboard.rule=Host(`student.kaist.ac.kr`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=auth@docker"
+      - "traefik.http.routers.dashboard.tls=yes"
+      - "traefik.http.routers.dashboard.tls.certResolver=letsencrypt"
       - "traefik.http.middlewares.auth.basicauth.users=kaistua:$$2y$$05$$VnWsC5H/qZU1Jx4QiaeP4.pVR3X4iPHbk5gRnl4v3x1WhC2tLelBO"
 
 networks:
